Fix gross wrap

--- a/app/assets/sass/_custom.scss
+++ b/app/assets/sass/_custom.scss
@@ -1045,6 +1045,11 @@ margin-bottom: 20px;
 
 		.govuk-summary-card {
 			margin-left: govuk-spacing(2);
+
+			&__actions {
+				align-content: baseline;
+				width: 100%;
+			}
 		}
 	}
 }
